# src/routes/user.routes.js
@@ -3,6 +3,7 @@ import {
   loginUser,
   registerUser,
   getUser,
+  getUsersList,
 } from "../controllers/user.controller.js";
 
 const router = Router();
@@ -10,5 +11,6 @@ const router = Router();
 router.route("/register").post(registerUser);
 router.route("/login").post(loginUser);
 router.route("/user").get(getUser);
+router.route("/list").get(getUsersList);
 
 export default router;
